--- a/templates/accounts/auth-signin.html
+++ b/templates/accounts/auth-signin.html
@@ -15,12 +15,10 @@
                 <form method="post" class="card-body text-center">
                     {% csrf_token %}
 
-                    
-
                     <div class="mb-4">
                         <i class="feather icon-unlock auth-icon"></i>
                     </div>
-                    <h3 class="mb-4">Login</h3>
+                    <h3 class="mb-4">登入</h3>
                     {% if form.non_field_errors %}
                         {% for error in form.non_field_errors %}
                             <span class="text-danger d-block my-3">{{ error }}</span>
@@ -39,7 +37,7 @@
                     </div>
                     <button class="btn btn-primary shadow-2 mb-4">Login</button>
                     <p class="mb-2 text-muted">Forgot password? <a href="{% url 'password_reset' %}">Reset</a></p>
-                    <p class="mb-0 text-muted">Don’t have an account? <a href="{% url 'register' %}">Signup</a></p>
+                    <!-- <p class="mb-0 text-muted">Don’t have an account? <a href="{% url 'register' %}">Signup</a></p> -->
                 </form>
             </div>
         </div>
