--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -7,7 +7,7 @@
         <div class="b-bg">
           <i class="feather icon-trending-up"></i>
         </div>
-        <span class="b-title">Datta Able</span>
+        <span class="b-title">Watchdog</span>
       </a>
       <a class="mobile-menu" id="mobile-collapse" href="javascript:"><span></span></a>
     </div>
@@ -18,26 +18,20 @@
         </li>
         <li data-username="dashboard Default Ecommerce CRM Analytics Crypto Project" class="nav-item {% if 'index' in segment %}active{% endif %}">
           {% if request.user.is_superuser %}
-          <a href="{% url 'admin:index' %}" class="nav-link ">
+          <a href="{% url 'admin:index' %}" class="nav-link ">       
           {% else %}
           <a href="{% url 'index' %}" class="nav-link ">
           {% endif %}
-            <span class="pcoded-micon"><i class="feather icon-home"></i></span><span class="pcoded-mtext">Dashboard</span>
+          <span class="pcoded-micon"><i class="feather icon-home"></i></span><span class="pcoded-mtext">Dashboard</span>
           </a>
         </li>
-
-        {% if not request.user.is_authenticated %}
-        <li
-          data-username="Authentication Sign up Sign in reset password Change password Personal information profile settings map form subscribe"
-          class="nav-item pcoded-hasmenu">
-          <a href="javascript:" class="nav-link "><span class="pcoded-micon"><i
-                class="feather icon-lock"></i></span><span class="pcoded-mtext">Authentication</span></a>
-          <ul class="pcoded-submenu">
-            <li class=""><a href="{% url 'login' %}" class="">Sign IN</a></li>
-            <li class=""><a href="{% url 'register' %}" class="">Sign UP</a></li>
-          </ul>
+        
+        <!-- {% if not request.user.is_authenticated %}
+        <li data-username="Visitor login" class="nav-item {% if 'form_elements' in segment %}active{% endif %}">
+          <a href="{% url 'login' %}" class="nav-link "><span class="pcoded-micon"><i
+                class="feather icon-file-text"></i></span><span class="pcoded-mtext">登入</span></a>
         </li>
-        {% endif %}
+        {% endif %} -->
 
         {% admin_get_menu as app_list %}
         {% if app_list %}
@@ -69,8 +63,8 @@
           {% endfor %}
         {% endif %}
 
-        {% if request.user.is_authenticated and not request.user.is_superuser %}
-        <li class="nav-item pcoded-menu-caption">
+        {% if request.user.is_authenticated%}
+        <!-- <li class="nav-item pcoded-menu-caption">
           <label>UI Element</label>
         </li>
         <li
@@ -90,53 +84,57 @@
             <li class="{% if 'feather_icon' in segment %}active{% endif %}"><a href="{% url 'icon_feather' %}" class="">Feather<span
                   class="pcoded-badge label label-danger">NEW</span></a></li>
           </ul>
-        </li>
+        </li> -->
         <li class="nav-item pcoded-menu-caption">
-          <label>Forms & table</label>
+          <label>長者相關</label>
         </li>
-        <li data-username="form elements advance componant validation masking wizard picker select" class="nav-item {% if 'form_elements' in segment %}active{% endif %}">
-          <a href="{% url 'form_elements' %}" class="nav-link "><span class="pcoded-micon"><i
-                class="feather icon-file-text"></i></span><span class="pcoded-mtext">Form elements</span></a>
+        {% if not request.user.type == 'ELDER' %}
+        <li data-username="Elder register" class="nav-item {% if 'form_elements' in segment %}active{% endif %}">
+          <a href="{% url 'elder_register' %}" class="nav-link "><span class="pcoded-micon"><i
+                class="feather icon-file-text"></i></span><span class="pcoded-mtext">新增照護長者</span></a>
+        </li>
+        {% endif %}
+        <li data-username="Add record" class="nav-item {% if 'add_record' in segment %}active{% endif %}"><a href="{% url 'add_record' %}" class="nav-link"><span
+          class="pcoded-micon"><i class="feather icon-sidebar"></i></span><span class="pcoded-mtext">新增長者紀錄</span></a>
         </li>
         <li data-username="Table bootstrap datatable footable" class="nav-item {% if 'basic_tables' in segment %}active{% endif %}">
           <a href="{% url 'basic_tables' %}" class="nav-link "><span class="pcoded-micon"><i
                 class="feather icon-server"></i></span><span class="pcoded-mtext">Table</span></a>
         </li>
-        <li class="nav-item pcoded-menu-caption">
+        
+        <!-- <li class="nav-item pcoded-menu-caption">
           <label>Chart & Maps</label>
         </li>
         <li data-username="Charts Morris" class="nav-item {% if 'morris_chart' in segment %}active{% endif %}"><a href="{% url 'morris_chart' %}" class="nav-link "><span
               class="pcoded-micon"><i class="feather icon-pie-chart"></i></span><span
               class="pcoded-mtext">Chart</span></a>
-        </li>
-        <li data-username="Maps Google" class="nav-item {% if 'google_maps' in segment %}active{% endif %}"><a href="{% url 'google_maps' %}" class="nav-link "><span
+        </li> -->
+        <!-- <li data-username="Maps Google" class="nav-item {% if 'google_maps' in segment %}active{% endif %}"><a href="{% url 'google_maps' %}" class="nav-link "><span
               class="pcoded-micon"><i class="feather icon-map"></i></span><span class="pcoded-mtext">Maps</span></a>
-        </li>
+        </li> -->
         <li class="nav-item pcoded-menu-caption">
-          <label>Pages</label>
+          <label>其他</label>
+        </li>        
+        <li data-username="Manager Authentication" class="nav-item {% if 'form_elements' in segment %}active{% endif %}">
+          {% if request.user.is_superuser %}
+          <a href="{% url 'register' %}" class="nav-link "><span class="pcoded-micon"><i
+                class="feather icon-edit"></i></span><span class="pcoded-mtext">新增使用者</span></a>
+          {% endif %}
+          <a href="{% url 'login' %}" class="nav-link "><span class="pcoded-micon"><i
+            class="feather icon-unlock"></i></span><span class="pcoded-mtext">登入其他帳號</span></a>
         </li>
-        <li
-          data-username="Authentication Sign up Sign in reset password Change password Personal information profile settings map form subscribe"
-          class="nav-item pcoded-hasmenu">
-          <a href="javascript:" class="nav-link "><span class="pcoded-micon"><i
-                class="feather icon-lock"></i></span><span class="pcoded-mtext">Authentication</span></a>
-          <ul class="pcoded-submenu">
-            <li class=""><a href="{% url 'register' %}" class="" target="_blank">Sign up</a></li>
-            <li class=""><a href="{% url 'login' %}" class="" target="_blank">Sign in</a></li>
-          </ul>
-        </li>
-        <li data-username="Profile Page" class="nav-item {% if 'profile' in segment %}active{% endif %}"><a href="{% url 'profile' %}" class="nav-link"><span
+        <!-- <li data-username="Profile Page" class="nav-item {% if 'profile' in segment %}active{% endif %}"><a href="{% url 'profile' %}" class="nav-link"><span
               class="pcoded-micon"><i class="feather icon-user"></i></span><span class="pcoded-mtext">Profile
               Page</span></a>
-        </li>
-        <li data-username="Sample Page" class="nav-item {% if 'sample_page' in segment %}active{% endif %}"><a href="{% url 'sample_page' %}" class="nav-link"><span
+        </li> -->
+        <!-- <li data-username="Sample Page" class="nav-item {% if 'sample_page' in segment %}active{% endif %}"><a href="{% url 'sample_page' %}" class="nav-link"><span
               class="pcoded-micon"><i class="feather icon-sidebar"></i></span><span class="pcoded-mtext">Sample
               page</span></a>
-        </li>
-        <li data-username="Disabled Menu" class="nav-item disabled"><a href="javascript:" class="nav-link"><span
+        </li>  -->
+        <!-- <li data-username="Disabled Menu" class="nav-item disabled"><a href="javascript:" class="nav-link"><span
               class="pcoded-micon"><i class="feather icon-power"></i></span><span class="pcoded-mtext">Disabled
               menu</span></a>
-        </li>
+        </li> -->
         {% endif %}
       </ul>
     </div>
