--- a/templates/pages/tbl_bootstrap.html
+++ b/templates/pages/tbl_bootstrap.html
@@ -6,7 +6,7 @@
     <!-- [ Main Content ] start -->
     <div class="row">
       <!-- [ basic-table ] start -->
-      <div class="col-xl-12">
+      <!-- <div class="col-xl-12">
         <div class="card">
           <div class="card-header">
             <h5>Basic Table</h5>
@@ -48,7 +48,7 @@
           </div>
         </div>
       </div>
-      <!-- [ basic-table ] end -->
+      [ basic-table ] end -->
 
       <!-- [ Hover-table ] start -->
       <div class="col-xl-12">
