--- a/templates/pages/profile.html
+++ b/templates/pages/profile.html
@@ -1,86 +1,50 @@
 {% extends 'layouts/base.html' %}
 {% load static %}
+<html lang='zh-Hant'></html>
 
 {% block breadcrumbs %}{% endblock breadcrumbs %}
 
 {% block content %}
-
+<link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css' rel='stylesheet'></link>
   <!-- [ Main Content ] start -->
   <div class="row">
-    <div class="col-sm-8">
+    
+    <div class="col-sm">
       <div class="card">
         <div class="card-header">
-          <h5>Edit Info</h5>
+          <h3>{{ user.username }}'s Profile</h3>
         </div>
         <div class="card-block">
           <div class="row">
             <div class="col-sm-12 mb-4">
-              <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1"
-                  aria-describedby="emailHelp" placeholder="Enter email">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                  else.</small>
+                <form method="POST" enctype="multipart/form-data">
+                  {% csrf_token %}
+                  
+                  {% for field in form %}
+                      {% if field.name != "upload_profile" %}
+                          <div class="form-group">
+                              <!-- <label for="{{ field.id_for_label }}" class="float-left">{{ field.label }}</label> -->
+                              {{ field }}
+                              <span class="text-danger d-block text-left">{{ field.errors }}</span>
+                          </div>
+                      {% endif %}
+                  {% endfor %}
+                  <div class="d-flex align-items-left justify-content-left flex-column">
+                    <div class="text-left">
+                      <label class="btn btn-primary ">
+                        <input id="upload_profile" style="display:none;" type="file" name="upload_profile">
+                        <i class="fa fa-photo"></i>更換照片
+                      </label>
+                      <div class="w-50 p-3">
+                        <img src="{{ MEDIA_URL }}Profile/{{ request.user.username }}/{{ request.user.username }}.jpg" alt="profile image"
+                          class="img-fluid ">
+                      </div>
+                    </div>
+                  </div>
+                  <button type="submit" class="btn btn-primary">更新</button>
+                </form>
               </div>
             </div>
-            <div class="col-sm-6 mb-4">
-              <div class="form-group">
-                <label for="fn">First Name</label>
-                <input type="email" class="form-control" id="fn" aria-describedby="emailHelp"
-                  placeholder="Enter email">
-              </div>
-            </div>
-            <div class="col-sm-6 mb-4">
-              <div class="form-group">
-                <label for="ln">Last Name</label>
-                <input type="email" class="form-control" id="ln" aria-describedby="emailHelp"
-                  placeholder="Enter email">
-              </div>
-            </div>
-            <div class="col-sm-12 mb-4">
-              <div class="form-group">
-                <label for="add">Address</label>
-                <input type="email" class="form-control" id="add" aria-describedby="emailHelp"
-                  placeholder="Enter email">
-                <small id="addd" class="form-text text-muted">This is your shipments address</small>
-              </div>
-            </div>
-            <div class="col-sm-12 mb-4">
-              <div class="form-group">
-                <label for="abt">About Info</label>
-                <textarea type="email" class="form-control" id="abt" aria-describedby="emailHelp"
-                  placeholder="Bio"></textarea>
-                <small id="abf" class="form-text text-muted">We'll show this on your profile.</small>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="card">
-        <div class="card-block">
-          <div class="d-flex align-items-center justify-content-center flex-column">
-            <div class="w-50 p-3">
-              <img src="https://via.placeholder.com/500" alt="profile image"
-                class="img-fluid rounded-circle">
-            </div>
-            <div class="text-center">
-              <h4 class="font-weight-bold h6">Author Name</h4>
-              <p class="font-italic text-muted">Lorem ipsum dolor.</p>
-            </div>
-          </div>
-
-          <div class="small font-weight-light mt-4 text-center text-muted">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos
-              esse excepturi fugiat id numquam? Enim illo, perferendis. Eum, ratione,
-              voluptas?</p>
-          </div>
-          <div class="d-flex justify-content-center align-items-center">
-            <a href="#" class="h6 text-muted d-block m-1"><i class="icon feather icon-facebook"></i></a>
-            <a href="#" class="h6 text-muted d-block m-1"><i class="icon feather icon-twitter"></i></a>
-            <a href="#" class="h6 text-muted d-block m-1"><i class="icon feather icon-instagram"></i></a>
-
           </div>
         </div>
       </div>
