--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -98,8 +98,8 @@
           class="pcoded-micon"><i class="feather icon-sidebar"></i></span><span class="pcoded-mtext">新增長者紀錄</span></a>
         </li>
         <li data-username="Table bootstrap datatable footable" class="nav-item {% if 'basic_tables' in segment %}active{% endif %}">
-          <a href="{% url 'basic_tables' %}" class="nav-link "><span class="pcoded-micon"><i
-                class="feather icon-server"></i></span><span class="pcoded-mtext">Table</span></a>
+          <a href="{% url 'elder_data' %}" class="nav-link "><span class="pcoded-micon"><i
+                class="feather icon-server"></i></span><span class="pcoded-mtext">長者紀錄</span></a>
         </li>
         
         <!-- <li class="nav-item pcoded-menu-caption">
