--- a/templates/pages/tbl_bootstrap.html
+++ b/templates/pages/tbl_bootstrap.html
@@ -96,7 +96,7 @@
       <!-- [ Hover-table ] end -->
 
       <!-- [ stiped-table ] start -->
-      <div class="col-xl-12">
+      <!-- <div class="col-xl-12">
         <div class="card">
           <div class="card-header">
             <h5>Striped Table</h5>
@@ -137,7 +137,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- [ stiped-table ] end -->
     </div>
     <!-- [ Main Content ] end -->
