--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -88,20 +88,24 @@
         <li class="nav-item pcoded-menu-caption">
           <label>長者相關</label>
         </li>
+        <li data-username="Add record" class="nav-item {% if 'add_record' in segment %}active{% endif %}"><a href="{% url 'add_record' %}" class="nav-link"><span
+          class="pcoded-micon"><i class="feather icon-sidebar"></i></span><span class="pcoded-mtext">新增長者紀錄</span></a>
+        </li>
+        <li data-username="View elder list" class="nav-item {% if 'add_record' in segment %}active{% endif %}"><a href="{% url 'elder_list' %}" class="nav-link"><span
+          class="pcoded-micon"><i class="feather icon-sidebar"></i></span><span class="pcoded-mtext">查看照護長者</span></a>
+        </li>
+        {% if request.user.type == 'ELDER' %}
+        <li data-username="Table bootstrap datatable footable" class="nav-item {% if 'basic_tables' in segment %}active{% endif %}">
+          <a href="{% url 'elder_record' %}" class="nav-link "><span class="pcoded-micon"><i
+                class="feather icon-server"></i></span><span class="pcoded-mtext">長者紀錄</span></a>
+        </li>
+        {% endif %}
         {% if not request.user.type == 'ELDER' %}
         <li data-username="Elder register" class="nav-item {% if 'form_elements' in segment %}active{% endif %}">
           <a href="{% url 'elder_register' %}" class="nav-link "><span class="pcoded-micon"><i
                 class="feather icon-file-text"></i></span><span class="pcoded-mtext">新增照護長者</span></a>
         </li>
         {% endif %}
-        <li data-username="Add record" class="nav-item {% if 'add_record' in segment %}active{% endif %}"><a href="{% url 'add_record' %}" class="nav-link"><span
-          class="pcoded-micon"><i class="feather icon-sidebar"></i></span><span class="pcoded-mtext">新增長者紀錄</span></a>
-        </li>
-        <li data-username="Table bootstrap datatable footable" class="nav-item {% if 'basic_tables' in segment %}active{% endif %}">
-          <a href="{% url 'elder_data' %}" class="nav-link "><span class="pcoded-micon"><i
-                class="feather icon-server"></i></span><span class="pcoded-mtext">長者紀錄</span></a>
-        </li>
-        
         <!-- <li class="nav-item pcoded-menu-caption">
           <label>Chart & Maps</label>
         </li>
