--- a/templates/pages/elder_record.html
+++ b/templates/pages/elder_record.html
@@ -10,7 +10,7 @@
       <div class="col-xl-12">
         <div class="card">
           <div class="card-header">
-            <h5>長者影片紀錄</h5>
+            <h5>長者歷史紀錄</h5>
             <!-- <span class="d-block m-t-5">use class <code>table-hover</code> inside table element</span> -->
           </div>
           <div class="card-block table-border-style">
