--- a/templates/pages/profile.html
+++ b/templates/pages/profile.html
@@ -1,14 +1,14 @@
+<!-- users/templates/users/profile_page.html -->
+
 {% extends 'layouts/base.html' %}
 {% load static %}
-<html lang='zh-Hant'></html>
 
 {% block breadcrumbs %}{% endblock breadcrumbs %}
 
 {% block content %}
-<link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css' rel='stylesheet'></link>
+  <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css' rel='stylesheet'></link>
   <!-- [ Main Content ] start -->
   <div class="row">
-    
     <div class="col-sm">
       <div class="card">
         <div class="card-header">
@@ -16,49 +16,27 @@
         </div>
         <div class="card-block">
           <div class="row">
-            <div class="col-sm-12 mb-4">
-                <form method="POST" enctype="multipart/form-data">
-                  {% csrf_token %}
-                  {% if form.errors %}
-                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                      <strong>錯誤!</strong> 每個欄位都必須填寫！<br>
-                  
-                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                      </button>
-                    </div>
-                  {% elif messages %}
-                    <div class="alert alert-success alert-dismissible fade show" role="alert">
-                      {% for message in messages %}
-                        <strong>成功！</strong> {{ message }}<br>
-                      {% endfor %}
-                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                      </button>
-                    </div>
-                  {% endif %}
-                  {% for field in form %}
-                      {% if field.name != "upload_profile" %}
-                          <div class="form-group">
-                              {{ field }}
-                              <span class="text-danger d-block text-left">{{ field.errors }}</span>
-                          </div>
-                      {% endif %}
-                  {% endfor %}
-                  <div class="d-flex align-items-left justify-content-left flex-column">
-                    <div class="text-left">
-                      <div class="w-50 p-3">
-                        <img src="{{ MEDIA_URL }}Profile/{{ request.user.username }}/{{ request.user.username }}.jpg" alt="profile image" class="img-fluid" style="box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);" height="200" width="200">
-                    </div>                    
-                      <label class="btn btn-primary ">
-                        <input id="upload_profile" style="display:none;" type="file" name="upload_profile">
-                        <i class="fa fa-photo"></i>更換照片
-                      </label>
-                    </div>
-                  </div>
-                  <button type="submit" class="btn btn-primary mx-auto d-block">更新</button>
-                </form>
+            <div class="col-sm-4 mb-4">
+              <!-- Display profile image on the left -->
+              <div class="w-50 p-3">
+                {% if user.upload_profile %}
+                <img src="{{ MEDIA_URL }}Profile/{{ request.user.username }}/{{ request.user.username }}.jpg" alt="profile image" class="img-fluid" style="box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);" height="200" width="200">{% else %}
+                  <!-- Default profile image or placeholder -->
+                  <img src="{% static 'images/default_profile.jpg' %}" alt="default profile image" class="img-fluid" style="box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);" height="200" width="200">
+                {% endif %}
+                
+                <!-- Add a button link to the edit page beneath the profile photo -->
+                <a href="{% url 'edit_profile' user.username %}" class="btn btn-primary mt-3">更改資料</a>
               </div>
+            </div>
+            <div class="col-sm-8 mb-4">
+              <!-- Display user information on the right -->
+              <p><strong>名字:</strong> {{ user.name }}</p>
+              <p><strong>身份:</strong> {{ user.get_type_display }}</p>
+              <p><strong>性別:</strong> {{ user.get_sex_display }}</p>
+              <p><strong>生日:</strong> {{ user.birthday }}</p>
+              <p><strong>聯絡電話:</strong> {{ user.phone_num }}</p>
+              <p><strong>住址:</strong> {{ user.address }}</p>
             </div>
           </div>
         </div>
@@ -66,5 +44,4 @@
     </div>
   </div>
   <!-- [ Main Content ] end -->
-
- {% endblock content %}
+{% endblock content %}
