--- a/templates/pages/profile_edit.html
+++ b/templates/pages/profile_edit.html
@@ -31,9 +31,9 @@
                     </div>
                   {% elif messages %}
                     <div class="alert alert-success alert-dismissible fade show" role="alert">
-                      {% for message in messages %}
+                      <!-- {% for message in messages %}
                         <strong>成功！</strong> {{ message }}<br>
-                      {% endfor %}
+                      {% endfor %} -->
                       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                       </button>
